force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/vlocity_cmt__AsyncProcessManager__e.object-meta.xml
<CustomObject>
    <description>Controls the progress of the Async Process.</description>
    <label>Async Process Manager</label>
    <pluralLabel>Async Process Managers</pluralLabel>
</CustomObject>