force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__AsyncProcessStepId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncProcessStepId__c</fullName>
    <description>ID of the Async Process Step record.</description>
    <label>Async Process Step</label>
    <length>18</length>
    <type>Text</type>
</CustomField>