force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__AsyncStepProgress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncStepProgress__c</fullName>
    <description>Controls the Async Process execution (state machine).</description>
    <label>Async Step Progress</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>