force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Status of the process executed.</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>