force-app/main/default/objects/vlocity_cmt__AsyncProcessManager__e/fields/vlocity_cmt__StepNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StepNumber__c</fullName>
    <description>step number of the Async Process Step.</description>
    <label>Step Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>